[package]
name = "uhid-rs"
version = "0.1.0"
authors = ["Filipe Laíns <lains@riseup.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.2"
epoll = "4.3.1"
serde = {version = "1.0.124",  features = ["derive"]}
serde-big-array = "0.3.1"
